@@ -24,9 +24,9 @@ task :test do
   #   QuickLZ is also not maintained on Github, but on Bitbucket
   #   and I don't know where the issue tracker is.
   #
-  # * Cassandra show spurious failures
+  # * Cassandra and Mongo show spurious failures
   if ENV['TEST_GROUP']
-    unstable = specs.select {|s| s =~ /quicklz|cassandra/ }
+    unstable = specs.select {|s| s =~ /quicklz|cassandra|mongo/ }
     specs -= unstable
   end
 
