@@ -469,14 +469,14 @@ end
   use :Expires
   adapter :Memory
 end},
-    :specs => STANDARD_SPECS.without_transform.with_expires.without_persist
+    :specs => STANDARD_SPECS.without_transform.with_expires.without_persist.returnsame
   },
   'expires_memory_with_default_expires' => {
     :build => %{Moneta.build do
   use :Expires, :expires => 1
   adapter :Memory
 end},
-    :specs => STANDARD_SPECS.without_transform.with_expires.with_default_expires.without_persist
+    :specs => STANDARD_SPECS.without_transform.with_expires.with_default_expires.without_persist.returnsame
   },
   'expires_file' => {
     :build => %{Moneta.build do
@@ -551,7 +551,7 @@ end},
     adapter :PStore, :file => File.join(make_tempdir, 'shared')
   end
 end},
-    :specs => ADAPTER_SPECS.without_persist,
+    :specs => ADAPTER_SPECS,
     :tests => %{
 it 'shares values' do
   store['shared_key'] = 'shared_value'
@@ -1152,6 +1152,19 @@ it 'has method #prefix' do
 
   store.prefix('a').raw.default_options.should == {:store=>{:raw=>true,:prefix=>'a'},:load=>{:raw=>true,:prefix=>'a'},
                                                    :delete=>{:raw=>true,:prefix=>'a'},:key? => {:prefix=>'a'},:increment=>{:prefix=>'a'}}
+end
+
+it 'supports adding proxis using #with' do
+  compressed_store = store.with(:prefix => 'compressed') do
+    use :Transformer, :value => :zlib
+  end
+  store['key'] = 'uncompressed value'
+  compressed_store['key'] = 'compressed value'
+  store['key'].should == 'uncompressed value'
+  compressed_store['key'].should == 'compressed value'
+  store.key?('compressedkey').should be_true
+  # Check if value is compressed
+  compressed_store['key'].should_not == store['compressedkey']
 end}
   },
 }
