@@ -54,24 +54,24 @@ describe_moneta "expires_memory_with_default_expires" do
   it_should_behave_like 'null_integerkey_booleanvalue'
   it_should_behave_like 'null_integerkey_nilvalue'
   it_should_behave_like 'null_integerkey_integervalue'
-  it_should_behave_like 'returndifferent_objectkey_objectvalue'
-  it_should_behave_like 'returndifferent_objectkey_stringvalue'
-  it_should_behave_like 'returndifferent_objectkey_hashvalue'
-  it_should_behave_like 'returndifferent_stringkey_objectvalue'
-  it_should_behave_like 'returndifferent_stringkey_stringvalue'
-  it_should_behave_like 'returndifferent_stringkey_hashvalue'
-  it_should_behave_like 'returndifferent_hashkey_objectvalue'
-  it_should_behave_like 'returndifferent_hashkey_stringvalue'
-  it_should_behave_like 'returndifferent_hashkey_hashvalue'
-  it_should_behave_like 'returndifferent_booleankey_objectvalue'
-  it_should_behave_like 'returndifferent_booleankey_stringvalue'
-  it_should_behave_like 'returndifferent_booleankey_hashvalue'
-  it_should_behave_like 'returndifferent_nilkey_objectvalue'
-  it_should_behave_like 'returndifferent_nilkey_stringvalue'
-  it_should_behave_like 'returndifferent_nilkey_hashvalue'
-  it_should_behave_like 'returndifferent_integerkey_objectvalue'
-  it_should_behave_like 'returndifferent_integerkey_stringvalue'
-  it_should_behave_like 'returndifferent_integerkey_hashvalue'
+  it_should_behave_like 'returnsame_objectkey_objectvalue'
+  it_should_behave_like 'returnsame_objectkey_stringvalue'
+  it_should_behave_like 'returnsame_objectkey_hashvalue'
+  it_should_behave_like 'returnsame_stringkey_objectvalue'
+  it_should_behave_like 'returnsame_stringkey_stringvalue'
+  it_should_behave_like 'returnsame_stringkey_hashvalue'
+  it_should_behave_like 'returnsame_hashkey_objectvalue'
+  it_should_behave_like 'returnsame_hashkey_stringvalue'
+  it_should_behave_like 'returnsame_hashkey_hashvalue'
+  it_should_behave_like 'returnsame_booleankey_objectvalue'
+  it_should_behave_like 'returnsame_booleankey_stringvalue'
+  it_should_behave_like 'returnsame_booleankey_hashvalue'
+  it_should_behave_like 'returnsame_nilkey_objectvalue'
+  it_should_behave_like 'returnsame_nilkey_stringvalue'
+  it_should_behave_like 'returnsame_nilkey_hashvalue'
+  it_should_behave_like 'returnsame_integerkey_objectvalue'
+  it_should_behave_like 'returnsame_integerkey_stringvalue'
+  it_should_behave_like 'returnsame_integerkey_hashvalue'
   it_should_behave_like 'store_objectkey_objectvalue'
   it_should_behave_like 'store_objectkey_stringvalue'
   it_should_behave_like 'store_objectkey_hashvalue'
