@@ -16,8 +16,8 @@ describe_moneta "shared" do
 
   include_context 'setup_store'
   it_should_behave_like 'increment'
-  it_should_behave_like 'not_persist'
   it_should_behave_like 'null_stringkey_stringvalue'
+  it_should_behave_like 'persist_stringkey_stringvalue'
   it_should_behave_like 'returndifferent_stringkey_stringvalue'
   it_should_behave_like 'store_stringkey_stringvalue'
   it 'shares values' do
